--- a/4.html
+++ b/4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Kate's Hello World-2.html</title>
+<title>Kate's Hello World-4.html</title>
 <meta charset="utf-8">
 </head>
 
@@ -63,22 +63,8 @@
 <!-- End Channel Plugin -->
 
 <p>
-<font color="indianred"><h4>Marketing</h4></font>
+<font color="indianred"><h2><u>Movie</u></h2></font>
 
-</p>
-
-<p>
-<font color="indianred"><h4>Novel</h4></font>
-
-</p>
-
-<p>
-<font color="indianred"><h4>Essay</h4></font>
-
-</p>
-
-<p>
-<font color="indianred"><h4>Phychology</h4></font>
 
 </p>
 </body>
