--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <center><img src="kate.jpg" width="300"></center>
 <p>
 Hello!<br>
-My name is Kate :D<br>
 Thank you for visiting my website!
 </p>
 
 <ol>
-<li><a href="1.html">TAG</a><br></li>
-<li><a href="2.html">ATTITUDE</a><br></li>
-<li><a href="3.html">FONT</a><br></li>
+<li><a href="1.html">Intro</a><br></li>
+<li><a href="2.html">Book</a><br></li>
+<li><a href="3.html">Music</a><br></li>
+<li><a href="4.html">Movie</a><br></li>
 </ol>
 
 <!-- Channel Plugin Scripts -->
