--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
 <title>Kate's Hello World</title>
 <meta charset="utf-8">
+<style>
+  h1 {
+    text-align:center;
+    font-size: 64px;
+    text-decoration: none;
+  }
+  a{
+    text-decoration: none;
+  }
+  </style>
 </head>
 
 <body>
 <font face="trebuchet ms">
 
-<h1><center><font color="coral"><a href="index.html">HELLO WORLD</a></center></h1></font>
+<h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
 
 <center><img src="kate.jpg" width="300"></center>
 <p>
