--- a/1.html
+++ b/1.html
@@ -3,21 +3,32 @@
 <head>
 <title>Kate's Hello World-1.html</title>
 <meta charset="utf-8">
+<style>
+  h1 {
+    text-align:center;
+    font-size: 64px;
+    text-decoration: none;
+  }
+a{
+    text-decoration: none;
+      text-align:center;
+      color:salmon;
+    }
+
+  </style>
 </head>
 
 <body>
 <font face="trebuchet ms">
-
-<h1><center><font color="coral"><a href="index.html" target="_blank">HELLO WORLD</a></center></h1></font>
-
+  <h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
 
 
-<ol>
-<li><a href="1.html">Intro</a><br></li>
-<li><a href="2.html">Book</a><br></li>
-<li><a href="3.html">Music</a><br></li>
-<li><a href="4.html">Movie</a><br></li>
-</ol>
+<center>
+<a href="1.html"><u>Intro</u></a><br>
+<a href="2.html"><u>Book</u></a><br>
+<a href="3.html"><u>Music</u></a><br>
+<a href="4.html"><u>Movie</u></a><br>
+</center>
 
 <!-- Channel Plugin Scripts -->
 <script>
@@ -64,14 +75,14 @@
 <!-- End Channel Plugin -->
 <p>
 
-  <font color="indianred"><h4>SNS</h4></font>
-  <a href="https://www.facebook.com/profile.php?id=100001960290670&ref=bookmarks" target="_blank">Facebook</a><br>
-  <a href="https://www.instagram.com/eundkong/" target="_blank">instagram</a>
+  <font color="coral"><h4>SNS</h4></font>
+  <a href="https://www.facebook.com/profile.php?id=100001960290670&ref=bookmarks" target="_blank" style=color:black;>- Facebook</a><br>
+  <a href="https://www.instagram.com/eundkong/" target="_blank" style=color:black;>- instagram</a>
 </p>
 
 <p>
 
-  <font color="indianred"><h4>Career</h4></font>
+  <font color="coral"><h4>Career</h4></font>
   - 2013.01~2013.06 대학내일 기획팀<br>
   - 2014.10~2015.11 MBC 보도국 팩트체크팀 <br>
   - 2016.12~2017.12 눔코리아 주식회사 브랜드마케팅팀<br>
