--- a/3.html
+++ b/3.html
@@ -3,19 +3,30 @@
 <head>
 <title>Kate's Hello World-3.html</title>
 <meta charset="utf-8">
+<style>
+  h1 {
+    text-align:center;
+    font-size: 64px;
+    text-decoration: none;
+  }
+  a{
+    text-decoration: none;
+    color:salmon
+  }
+  </style>
 </head>
 
 <body>
 <font face="trebuchet ms">
+  <h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
 
-<h1><center><font color="coral"><a href="index.html" target="_blank">HELLO WORLD</a></center></h1></font>
 
-<ol>
-<li><a href="1.html">Intro</a><br></li>
-<li><a href="2.html">Book</a><br></li>
-<li><a href="3.html">Music</a><br></li>
-<li><a href="4.html">Movie</a><br></li>
-</ol>
+  <center>
+  <a href="1.html"><u>Intro</u></a><br>
+  <a href="2.html"><u>Book</u></a><br>
+  <a href="3.html"><u>Music</u></a><br>
+  <a href="4.html"><u>Movie</u></a><br>
+  </center>
 
 <!-- Channel Plugin Scripts -->
 <script>
