--- a/4.html
+++ b/4.html
@@ -3,20 +3,30 @@
 <head>
 <title>Kate's Hello World-4.html</title>
 <meta charset="utf-8">
+<style>
+  h1 {
+    text-align:center;
+    font-size: 64px;
+    text-decoration: none;
+  }
+  a{
+    text-decoration: none;
+    color:salmon
+  }
+  </style>
 </head>
-
 <body>
 <font face="trebuchet ms">
 
-<h1><center><font color="coral"><a href="index.html" target="_blank">HELLO WORLD</a></center></h1></font>
+  <h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
 
 
-<ol>
-<li><a href="1.html">Intro</a><br></li>
-<li><a href="2.html">Book</a><br></li>
-<li><a href="3.html">Music</a><br></li>
-<li><a href="4.html">Movie</a><br></li>
-</ol>
+  <center>
+  <a href="1.html"><u>Intro</u></a><br>
+  <a href="2.html"><u>Book</u></a><br>
+  <a href="3.html"><u>Music</u></a><br>
+  <a href="4.html"><u>Movie</u></a><br>
+  </center>
 
 <!-- Channel Plugin Scripts -->
 <script>
@@ -64,7 +74,6 @@
 
 <p>
 <font color="indianred"><h4>Movie</h4></font>
-
 
 
 </p>
