--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   }
   a{
     text-decoration: none;
+    color:salmon
   }
   </style>
 </head>
@@ -18,20 +19,23 @@
 <body>
 <font face="trebuchet ms">
 
-<h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
+  <h1><a href="index.html"style=color:coral;>HELLO WORLD</a></h1>
+
+
+<center>
+<a href="1.html"><u>Intro</u></a><br>
+<a href="2.html"><u>Book</u></a><br>
+<a href="3.html"><u>Music</u></a><br>
+<a href="4.html"><u>Movie</u></a><br>
+</center>
+<br>
+<br>
 
 <center><img src="kate.jpg" width="300"></center>
 <p>
 Hello!<br>
 Thank you for visiting my website!
 </p>
-
-<ol>
-<li><a href="1.html">Intro</a><br></li>
-<li><a href="2.html">Book</a><br></li>
-<li><a href="3.html">Music</a><br></li>
-<li><a href="4.html">Movie</a><br></li>
-</ol>
 
 <!-- Channel Plugin Scripts -->
 <script>
